--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "build": "npm-run-all build:css build:js",
     "start:js": "react-scripts start",
     "build:js": "react-scripts build",
-    "build:css": "stylus src/ -o src/",
-    "watch:css": "npm run build:css && stylus-chokidar -w src/ -o src/",
+    "build:css": "stylus src/styles/ -o src/css/",
+    "watch:css": "npm run build:css && stylus-chokidar -w src/styles/ -o src/css/",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
