--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,14 @@
     },
     "parserOptions": {
         "ecmaFeatures": {
-            "jsx": true
+            "jsx": true,
+            "modules": true
         }
+    },
+    "rules": {
+        "no-undef": 0,
+        "no-console": 0,
+        "react/prop-types": 0,
+        "react/display-name": 0
     }
 }
