--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "description": "TODO",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Wesley Bliss <wesley.bliss@gmail.com> (https://wesleybliss.com)",
