--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,14 @@
   "dependencies": {
     "bootstrap": "^4.0.0-beta.2",
     "history": "^4.7.2",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.8",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "reselect": "^3.0.1"
   },
   "devDependencies": {
     "babel-plugin-transform-react-jsx": "^6.24.1",
