--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "test:watch": "nwb test-react --server"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0-beta.2",
+    "bootstrap": "^3.3.7",
     "history": "^4.7.2",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
@@ -26,7 +26,7 @@
   "devDependencies": {
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-react-pug": "^3.2.0",
-    "nwb": "0.20.x",
+    "nwb": "^0.20.0",
     "nwb-stylus": "^0.7.0"
   },
   "author": "",
