--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.0.0-beta.2",
+    "harp": "^0.25.0",
     "history": "^4.7.2",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
