--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:client": "cd client && npm run clean && npm run build && cp ../harp.json dist/"
   },
   "engines": {
-    "node": ">=8.6.0",
-    "npm": ">=5.5.1"
+    "node": ">=8.x",
+    "npm": ">=5.x"
   }
 }
