--- a/server/package.json
+++ b/server/package.json
@@ -14,5 +14,9 @@
     "chalk": "^2.3.0",
     "moment": "^2.19.3",
     "ws": "^3.3.2"
-  }
+  },
+  "engines": {
+    "node": ">=8.x",
+    "npm": ">5.5.1"
+  },
 }
