Added static server for client bc Heroku is gay

--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.0.0-beta.2",
     "harp": "^0.25.0",
     "history": "^4.7.2",
+    "mime-types": "^2.1.17",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -23,7 +24,9 @@
     "react-router-redux": "^5.0.0-alpha.8",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "reselect": "^3.0.1"
+    "reselect": "^3.0.1",
+    "restify": "^6.3.4",
+    "restify-cors-middleware": "^1.0.1"
   },
   "devDependencies": {
     "babel-plugin-transform-react-jsx": "^6.24.1",
