--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "postinstall": "npm run build:server && npm run build:client",
     "build:server": "cd server && npm install",
-    "build:client": "cd client && npm install && npm run clean && npm run build && cp ../harp.json dist/"
+    "build:client": "cd client && npm install && npm run clean && npm run build"
   },
   "engines": {
     "node": ">=8.x",
