--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "pm2": "NODE_ENV=production PORT=3000 pm2 start src/index.js --name dwm-api",
+    "pm2": "NODE_ENV=production PORT=3000 pm2 start src/index.js --name dwm-api"
   },
   "author": "Wesley Bliss <wesley.bliss@gmail.com> (https://wesleybliss.com)",
   "license": "ISC",
